Camera Logic update, refactoring and Projects scene peformance and responsiveness oriented changes

--- a/src/index.scss
+++ b/src/index.scss
@@ -256,9 +256,8 @@ input:-webkit-autofill:active {
 
 .tooltipWrapper .icon {
   position: relative;
-
   border-radius: 50%;
-  width: 20%;
+  width: 60px;
   height: 20%;
   font-size: 18px;
   display: flex;
