--- a/src/index.scss
+++ b/src/index.scss
@@ -72,6 +72,7 @@ body {
   box-sizing: border-box;
   z-index: -1;
   position: absolute;
+  background-color: #220140;
 }
 
 *::-webkit-scrollbar {
@@ -88,6 +89,7 @@ body {
   position: absolute;
   z-index: -1;
   overflow: hidden;
+  background-color: #220140;
 }
 
 .loadingScreen {
