--- a/src/index.css
+++ b/src/index.css
@@ -139,14 +139,14 @@ body {
   pointer-events: none;
 }
 
-.loadingScreen--started {
+/* .loadingScreen--started {
   opacity: 0;
   pointer-events: none;
 }
 
 .loadingScreen--started .loadingScreen__board {
   opacity: 0;
-}
+} */
 
 .loadingCanvas {
   pointer-events: none !important;
