--- a/src/index.css
+++ b/src/index.css
@@ -51,16 +51,15 @@ body {
   display: flex;
   flex-direction: column;
   text-align: center;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   font-family: Dosis;
   font-weight: bold;
   z-index: 100;
   background-color: #220140;
-  background-image: url("/svg/bgsvg.svg");
+  background-image: url("/svg/bgsvg.webp");
   background-repeat: no-repeat;
   background-size: cover;
-  will-change: transform;
 }
 
 .titleColor {
@@ -68,25 +67,22 @@ body {
   text-shadow: 1px 1px 8px #f74ee0;
 }
 
-.loadingScreen__button {
-  cursor: default;
-  text-shadow: 1px 1px 8px #f74ee0;
-  transition: background-color 0.4s;
-}
-
-.loadingScreen__button:hover {
-  color: #f597e8;
-  text-shadow: 1px 1px 8px #f74ee0;
-}
-
  /* Loading Screen Spinner */
 .spinner-box {
-  width: 150px;
-  height: 150px;
+  width: 100%;  
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
+.spinner-box1 {
+  backdrop-filter: blur(7px);
+  background-color: rgba(0, 0, 0, 0.3);
+  width: 100%; 
+  height: 100%; 
+}
+
 .circle-border {
   padding: 3px;
   display: flex;
@@ -97,33 +93,43 @@ body {
   background: linear-gradient(
     0deg,
     rgba(63, 249, 220, 0.1) 33%,
-    rgba(63, 249, 220, 1) 100%
+    rgba(63,249,220, 1) 100%
   );
-  animation: spin 0.8s linear 0s infinite;
+  max-width: 90vmin; /* Make sure it doesn't exceed viewport width/height */
+  max-height: 90vmin; /* Make sure it doesn't exceed viewport width/height */
 }
+
 .circle-border1 {
-  width: 150px;
-  height: 150px;
+  height: 90vmin;
+  aspect-ratio: 1/1;
+  animation: spin 40s linear 0s infinite;
 }
+
 .circle-border2 {
-  width: 130px;
-  height: 130px;
+  height: 85vmin;
+  aspect-ratio: 1/1;
   position: absolute;
 }
+
 .circle-core {
   width: 100%;
-  height: 100%;
+  aspect-ratio: 1/1;
   background-color: #220140;
   border-radius: 50%;
+  background-image: url("/svg/bgsvg.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+
 .configure-border {
-  width: 115px;
-  height: 115px;
+  width: calc(80vmin - 14vmin);
+  height: calc(80vmin - 14vmin);
   padding: 3px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .configure-border-1 {
   position: absolute;
   background: #f597e8;
@@ -146,29 +152,6 @@ body {
   width: 90%;
   height: 90%;
   background-color: #220140;
-}
-
-@media screen and (max-width: 767px) {
-  .spinner-box {
-    width: 120px;
-    height: 120px;
-}
-
-.circle-border1 {
-    width: 120px;
-    height: 120px;
-}
-/* smaller 20 */
-.circle-border2 {
-    width: 100px;
-    height: 100px;
-}
-
-/* smaller 5 */
-.configure-border {
-    width: 95px;
-    height: 95px;
-}
 }
 /* Stops Here */
 
